--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-glam = "0.25.0"
+wasm-bindgen = "0.2.91"
