--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,7 @@
 # in .vscode/settings.json "rust-analyzer.cargo.target": "wasm32-unknown-unknown"
 
 [build]
-target = "wasm32-unknown-unknown"
+# target = "wasm32-unknown-unknown"
 
 [target.wasm32-unknown-unknown]
 rustflags = ["--cfg=web_sys_unstable_apis"]
